# arcomage-tribute

./: CMakeLists.txt
Debreate/: arcomage-tribute.dbp
Game/: CMakeLists.txt
Game/Include/: ArcomageForward.h  defines.h
Game/Include/UI/: ui_manager.h
Game/Source/: config.cpp  cplayer.cpp  deck.cpp  engine.cpp  game.cpp  ui_manager.cpp  utility.cpp
Game/Source/System/: ZipFile.cpp
Tools/: CMakeLists.txt
Tools/DeckEditor/: CMakeLists.txt
Tools/Launcher/: CMakeLists.txt
Tools/Launcher/Include/: ConfigFileCompat.hpp  Launcher.h  OptionsDialog.h
Tools/Launcher/Source/: Launcher.cpp  OptionsDialog.cpp  main.cpp
Tools/Launcher/UI/: Launcher.ui
data/: config.xml
data/decks/: TestDeck.deck  mm7.deck
data/images/: license.txt
data/interface/: credits.xml  game.xml  game_over.xml  loading.xml  menu_main.xml  menu_pause.xml  menu_select.xml  startup.xml
data/music/: music.xml
data/scripts/: credits.lua  readme.txt  startup.lua
data/scripts/ai/: enemy_turn.lua
data/scripts/card/: 12_fundament.lua  43_balance.lua  5_mother_lode.lua  77_raybug.lua  79_acid_cloud.lua  80_unicorn.lua  81_elven_archers.lua  8_stolen_knowledge.lua
